# ssh-key-generator

./: .gitignore  Argh.hs  LICENSE  Main.hs  README.md  keytool.hs  ssh-key-generator.cabal  stack.yaml
SSH/: Agent.hs  Key.hs  Types.hs
SSH/Key/: Derived.hs
app/: AgentClient.hs  AgentTool.hs  KeyTool.hs
test-data/: id_ecdsa  id_ecdsa.pub  id_ed25519  id_ed25519.pub
test-data/unarmored/: ecdsa  ed25519
