name:                ssh-key-generator
version:             0.1.0.0
synopsis:            Deterministic SSH key generator
homepage:            https://github.com/mithrandi/ssh-key-generator
license:             MIT
license-file:        LICENSE
author:              Tristan Seligmann
maintainer:          mithrandi@mithrandi.net
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.10
executable ssh-key-generator
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <4.7,
                       binary,
                       bytestring,
                       base64-bytestring
  -- hs-source-dirs:
  default-language:    Haskell2010

  extensions:          OverloadedStrings
