name:                ssh-key-generator
version:             0.1.0.0
synopsis:            Deterministic SSH key generator
homepage:            https://github.com/mithrandi/ssh-key-generator
license:             MIT
license-file:        LICENSE
author:              Tristan Seligmann
maintainer:          mithrandi@mithrandi.net
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.10
executable ssh-key-generator
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.7,
                       binary,
                       bytestring (>= 0.10.4.0),
                       base64-bytestring,
                       cryptohash,
                       unix,
                       optparse-applicative,
                       directory,
                       entropy
  -- hs-source-dirs:
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, ViewPatterns
  ghc-options:         -Wall -Werror
  extra-libraries:     sodium
