name:                ssh-key-generator
version:             0.1.0.0
synopsis:            Deterministic SSH key generator
homepage:            https://github.com/mithrandi/ssh-key-generator
license:             MIT
license-file:        LICENSE
author:              Tristan Seligmann
maintainer:          mithrandi@mithrandi.net
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     SSH.Agent,
                       SSH.Key,
                       SSH.Types,
                       SSH.Key.Derived,
                       Argh
  build-depends:       base >=4.6 && <4.7,
                       binary,
                       bytestring (>= 0.10.4.0),
                       base64-bytestring,
                       cryptohash
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, ViewPatterns
  ghc-options:         -Wall -Werror
  extra-libraries:     sodium

executable ssh-key-generator
  main-is:             KeyTool.hs
  hs-source-dirs:      app
  build-depends:       base >=4.6 && <4.7,
                       unix,
                       optparse-applicative,
                       bytestring,
                       directory,
                       entropy,
                       ssh-key-generator
  -- hs-source-dirs:
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, ViewPatterns
  ghc-options:         -Wall -Werror

executable agent-tool
  main-is:             AgentTool.hs
  hs-source-dirs:      app
  build-depends:       base >=4.6 && <4.7,
                       optparse-applicative,
                       ssh-key-generator,
                       conduit,
                       conduit-combinators,
                       conduit-extra,
                       binary,
                       bytestring,
                       containers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, ViewPatterns
